--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,38 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Holiday of the Day</title>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-        crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-        crossorigin="anonymous"></script>
-    <link href="css/style.css" rel="stylesheet">
-
+    <% include ../partials/head %>
 </head>
 
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-            <div class="row">
-            <a class="navbar-brand" href="">Logo</a>
-        <!-- </div> -->
-        <!-- <div class="container"> -->
-                <a class="navbar-brand" href="photo">Photo Gallery</a>
-            <!-- </div> -->
-            <!-- <div class="container"> -->
-                    <a class="navbar-brand" href="game">Game</a>
-                <!-- </div> -->
-            </div>
+        <% include ../partials/nav %>
     </nav>
 
     <main class="container" role="main">
@@ -239,17 +214,7 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="mr-3"><a href="#">Copyright</a></div>
-                <div class="mr-3"><a href="#">Home</a></div>
-                <div class="mr-3"><a href="#">Contact</a></div>
-                <div class="mr-3"><a href="#">Style Guide</a></div>
-                <div class="mr-3"><a href="#">Site Map</a></div>
-                <div class="mr-3"><a href="#">Practice</a></div>
-            </div>
-        </div>
-        </div>
+        <% include ../partials/footer %>
     </footer>
 
 </body>
