--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <% include ../partials/head %>
+    <% include /partials/head %>
 </head>
 
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <% include ../partials/nav %>
+        <% include /partials/nav %>
     </nav>
 
     <main class="container" role="main">
@@ -214,7 +214,7 @@
     </main>
 
     <footer class="footer">
-        <% include ../partials/footer %>
+        <% include /partials/footer %>
     </footer>
 
 </body>
