--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,198 +15,25 @@
         <div class="row">
             <div class="col-md-8 mx-auto">
                 <div class="card h-100 mb-3">
-                    <!-- <h3 class="card-header">January 1st, 2019</h3> -->
                     <div class="card-header form-group d-flex align-items-center">
-                        <!-- <div class="row"> -->
-                        <select class="form-control w-25 mx-auto text-center" id="exampleSelect1">
+                        <select class="form-control w-25 mx-auto text-center" id="dates">
+                            <%for (var i = 0; i < pulldown.length; i++){%>
                             <h3>
-                                <option value="1-1">January 1, 2019</option>
+                                <option value='<%=pulldown[i].id%>'>
+                                    <%=pulldown[i].month%>-<%=pulldown[i].day%>
+                                </option>
                             </h3>
-                            <h3>
-                                <option value="1-2">January 2, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-3">January 3, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-4">January 4, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-5">January 5, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-6">January 6, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-7">January 7, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-8">January 8, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-9">January 9, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-10">January 10, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-11">January 11, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-12">January 12, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-13">January 13, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-14">January 14, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-15">January 15, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-16">January 16, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-17">January 17, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-18">January 18, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-19">January 19, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-20">January 20, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-21">January 21, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-22">January 22, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-23">January 23, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-24">January 24, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-25">January 25, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-26">January 26, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-27">January 27, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-28">January 28, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-29">January 29, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-30">January 30, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="1-31">January 31, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-1">February 1, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-2">February 2, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-3">February 3, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-4">February 4, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-5">February 5, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-6">February 6, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-7">February 7, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-8">February 8, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-9">February 9, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-10">February 10, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-11">February 11, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-12">February 12, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-13">February 13, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-14">February 14, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-15">February 15, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-16">February 16, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-17">February 17, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-18">February 18, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-19">February 19, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-20">February 20, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-21">February 21, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-22">February 22, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-23">February 23, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-24">February 24, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-25">February 25, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-26">February 26, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-27">February 27, 2019</option>
-                            </h3>
-                            <h3>
-                                <option value="2-28">February 28, 2019</option>
-                            </h3>
+                            <%}%>
                         </select>
-                        <!-- </div> -->
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Did you know?</h5>
-                        <h6 class="card-subtitle text-muted">Today is an awesome holiday!!</h6>
+                        <h5 class="card-title">The holiday on this day is: </h5>
+                        <h6 id="holidayTitle" class="card-subtitle text-muted"></h6>
                     </div>
-                    <img style="height: 300px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22318%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20318%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_158bd1d28ef%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A16pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_158bd1d28ef%22%3E%3Crect%20width%3D%22318%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22129.359375%22%20y%3D%2297.35%22%3EImage%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+                    <img id="holidayImage" style="height: 300px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22318%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20318%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_158bd1d28ef%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A16pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_158bd1d28ef%22%3E%3Crect%20width%3D%22318%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22129.359375%22%20y%3D%2297.35%22%3EImage%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
                         alt="Card image">
                     <div class="card-body">
-                        <p class="card-text">Do this to celebrate the holiday!.</p>
+                        <p id="holidayDescription" class="card-text"></p>
                     </div>
                 </div>
             </div>
@@ -218,5 +45,21 @@
     </footer>
 
 </body>
+<script>
+    var pulldown = <%-JSON.stringify(pulldown)%>
+
+
+    holidayTitle = document.getElementById('holidayTitle')
+    holidayImage = document.getElementById('holidayImage')
+    holidayDescription = document.getElementById('holidayDescription')
+
+    $("#dates").on("click change", function(e) {
+        id = $("#dates").val()
+        holidayTitle.innerHTML = pulldown[id].name;
+        holidayDescription.innerHTML = pulldown[id].description
+        holidayImage.src = pulldown[id].image_url
+    // $("#output").html("Event type: " + e.target.nodeName);
+});
+</script>
 
 </html>
