--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
       localStorage.setItem('day', '01');
     }
 
-    $('#dp3').val() = localStorage.getItem('month') + "-" + localStorage.getItem('day');
+    $('#dp3').val(localStorage.getItem('month') + "-" + localStorage.getItem('day'));
     pulldata();
 
 
