--- a/views/game.ejs
+++ b/views/game.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <% include /partials/head %>
-    <link rel="stylesheet" href="/wordfindfiles/wordfind.css">
+    <link rel="stylesheet" href="wordfindfiles/wordfind.css">
     <title>Word Find</title>
 </head>
 
@@ -21,8 +21,8 @@
 
         <!-- Add dependencies -->
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
-        <script src="/wordfindfiles/wordfind.js"></script>
-        <script src="/wordfindfiles/wordfindgame.js"></script>
+        <script src="wordfindfiles/wordfind.js"></script>
+        <script src="wordfindfiles/wordfindgame.js"></script>
         <!-- Add our logic -->
         <script>
             // An array with the words to show
