fixing the paths to the game js files

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -20,9 +20,9 @@
         <div id="puzzle-words"></div>
 
         <!-- Add dependencies -->
-        <script src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
-        <script src="public/js/wordfind.js"></script>
-        <script src="public/js/wordfindgame.js"></script>
+        <!-- <script src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script> -->
+        <script src="js/wordfind.js"></script>
+        <script src="js/wordfindgame.js"></script>
         <!-- Add our logic -->
         <script>
             // An array with the words to show
