--- a/views/game.ejs
+++ b/views/game.ejs
@@ -25,9 +25,9 @@
         <script src="js/wordfindgame.js"></script>
         <!-- Add our logic -->
         <script>
-        //var pulldown = <%-JSON.stringify(pulldown)%>
             // An array with the words to show
-            var words = ['cows', 'money'];
+            var words = ['cows', 'money', 'superman'
+           ];
 
             // Start a basic word game without customization !
             var gamePuzzle = wordfindgame.create(words, '#puzzle-container', '#puzzle-words');
