--- a/views/game.ejs
+++ b/views/game.ejs
@@ -25,7 +25,7 @@
         <script src="js/wordfindgame.js"></script>
         <!-- Add our logic -->
         <script>
-        
+        var gamewords = <%-JSON.stringify(gametime)%>
             // An array with the words to show
             var words = ['cows', 'money', 'superman'
            ];
