Have game change with day selected

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -15,6 +15,7 @@
 
   <main class="container" role="main">
     <body>
+      <h1 id="happy-day"></h1>
         <!-- Add required markup -->
         <div id="puzzle-container"></div>
         <div id="puzzle-words"></div>
@@ -27,7 +28,11 @@
         <script>
         var gamewords = <%-JSON.stringify(gametime)%>
             // An array with the words to show
-            var words = gamewords.find(x => x.id === 1).game_words;
+
+            var day = localStorage.getItem('day');
+            var happyday = gamewords.find(x => x.id === day).name;
+            document.getElementById('happy-day').innerHTML = happyday + " Word Find";
+            var words = gamewords.find(x => x.id === day).game_words;
 
             // Start a basic word game without customization !
             var gamePuzzle = wordfindgame.create(words, '#puzzle-container', '#puzzle-words');
