--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,7 +55,7 @@
 
     theday = localStorage.getItem('currentday');
 
-    $('#dp3').val(pulldown[theday].month + "-" + pulldown[theday].day));
+    $('#dp3').val(pulldown[theday].month + "-" + pulldown[theday].day);
     pulldata();
 
 
