--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <% include /partials/head %>
 </head>
 
-<body>
+<body class="heavy-rain-gradient">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <% include /partials/nav %>
