--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,7 @@ body {
 html {
   position: relative;
   min-height: 100%;
+    background: linear-gradient(to bottom right, #99ffcc 0%, #ffffff 83%);
 }
 body {
   /* Margin bottom by footer height */
