--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <div class="container">
             <div class="row">
-            <a class="navbar-brand" href="/">Logo</a>
+            <a class="navbar-brand" href="/">Everyday A Holiday</a>
         <!-- </div> -->
         <!-- <div class="container"> -->
                 <a class="navbar-brand" href="photo">Photo Gallery</a>
