--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,8 +61,12 @@ code {
     background: rgba(255,255,255,0.5);
 }
 
-.input, .add-on {
-    height: auto;
+.input[type="text"], .add-on {
+    height: 30px !important;
+}
+
+.input {
+    width: 132 px;
 }
 
 .card-subtitle {
