--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,5 @@
 <div class="container">
-            <div class="row">
-                <div class="mr-3"><a href="#">Copyright</a></div>
-                <div class="mr-3"><a href="#">Home</a></div>
-                <div class="mr-3"><a href="#">Contact</a></div>
-                <div class="mr-3"><a href="#">Style Guide</a></div>
-                <div class="mr-3"><a href="#">Site Map</a></div>
-                <div class="mr-3"><a href="#">Practice</a></div>
-            </div>
-        </div>
+    <div class="row">
+        <p>&copy; Copyright 2019. All Rights Reserved.</p>
+    </div>
+</div>
