--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,10 +33,8 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
   line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
+  background: rgba(89, 89, 89,.6)!important;
 }
 
 
@@ -45,7 +43,7 @@ body {
 /* Not required for template or sticky footer method. */
 
 body > .container {
-  padding: 60px 15px 0;
+  padding: 60px 15px;
 }
 
 .footer > .container {
@@ -77,10 +75,6 @@ code {
 }
 
 .bg-dark {
-    background: rgba(89, 89, 89,.6)!important;
-}
-
-.footer {
     background: rgba(89, 89, 89,.6)!important;
 }
 
