--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,7 +66,7 @@ code {
 }
 
 .brand-logo {
-    color: #ccffe6;
+    color: #ccffe6!important;
     font-size: 1.75rem;
 }
 
@@ -78,7 +78,7 @@ code {
     background: rgba(89, 89, 89,.6)!important;
 }
 
-.input {
+input {
     height: 25px!important;
 }
 
