--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
                     </div>
 
                     <div class="card-body">
-                        <h5 class="card-title">The holiday on this day is: </h5>
+                        <h5 id="dayTitle" class="card-title">The holiday on this day is: </h5>
                         <h6 id="holidayTitle" class="card-subtitle text-muted"></h6>
                     </div>
                     <img id="holidayImage" style="height: auto; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22318%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20318%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_158bd1d28ef%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A16pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_158bd1d28ef%22%3E%3Crect%20width%3D%22318%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22129.359375%22%20y%3D%2297.35%22%3EImage%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
@@ -45,6 +45,7 @@
     $(document).ready(function(){
     var pulldown = <%-JSON.stringify(pulldown)%>
 
+    dayTitle = document.getElementById('dayTitle')
     holidayTitle = document.getElementById('holidayTitle')
     holidayImage = document.getElementById('holidayImage')
     holidayDescription = document.getElementById('holidayDescription')
@@ -77,6 +78,59 @@
       for (var i = 0; i < pulldown.length; i++) {
           // console.log(pulldown[i].month + "-" + pulldown[i].day)
           if (id == pulldown[i].month + "-" + pulldown[i].day) {
+              var monthName;
+              
+              switch(pulldown[i].month) {
+                case 1:
+                  monthName = "January";
+                  break;
+                      
+                case 2:
+                  monthName = "February";
+                  break;
+                      
+                case 3:
+                   monthName = "March";
+                   break;
+                      
+                case 4:
+                  monthName = "April";
+                  break;
+                      
+                case 5:
+                  monthName = "May";
+                  break;
+                
+                case 6:
+                  monthName = "June";
+                  break;
+                  
+                case 7:
+                  monthName = "July";
+                  break;
+                  
+                case 8:
+                  monthName = "August";
+                  break;
+                  
+                case 9:
+                  monthName = "September";
+                  break;
+                  
+                case 10:
+                  monthName = "October";
+                  break;
+                  
+                case 11:
+                  monthName = "November";
+                  break;
+                  
+                case 12:
+                   monthName = "December";
+                   break;   
+              }
+              
+              dayTitle.innerHTML = "The holiday on " + monthName + " " + pulldown[i].day + "is:";
               holidayTitle.innerHTML = pulldown[i].name;
               holidayDescription.innerHTML = pulldown[i].description
               holidayImage.src = pulldown[i].image_url
