--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,51 +81,51 @@
               var monthName;
               
               switch(pulldown[i].month) {
-                case 01:
+                case '01':
                   monthName = "January";
                   break;
                       
-                case 02:
+                case '02':
                   monthName = "February";
                   break;
                       
-                case 03:
+                case '03':
                    monthName = "March";
                    break;
                       
-                case 04:
+                case '04':
                   monthName = "April";
                   break;
                       
-                case 05:
+                case '05':
                   monthName = "May";
                   break;
                 
-                case 06:
+                case '06':
                   monthName = "June";
                   break;
                   
-                case 07:
+                case '07':
                   monthName = "July";
                   break;
                   
-                case 08:
+                case '08':
                   monthName = "August";
                   break;
                   
-                case 09:
+                case '09':
                   monthName = "September";
                   break;
                   
-                case 10:
+                case '10':
                   monthName = "October";
                   break;
                   
-                case 11:
+                case '11':
                   monthName = "November";
                   break;
                   
-                case 12:
+                case '12':
                    monthName = "December";
                    break;   
               }
