--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat|Roboto');
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Noto+Serif|Roboto');
 
 /*!
  * Start Bootstrap - Portfolio Item (https://startbootstrap.com/template-overviews/portfolio-item)
@@ -9,7 +9,8 @@
 body {
   padding-top: 54px;
   background: linear-gradient(to bottom right, #99ffcc 0%, #ffffff 83%);
-    font-family: 'Roboto Condensed', sans-serif;
+    /*font-family: 'Roboto Condensed', sans-serif; */
+    font-family: 'Noto Serif', serif;
 }
 
 @media (min-width: 992px) {
@@ -68,7 +69,7 @@ code {
 .brand-logo {
     color: #ccffe6!important;
     font-size: 1.75rem;
-    font-family: 'Montserrat', sans-serif;
+    /*font-family: 'Montserrat', sans-serif;*/
 }
 
 .card-header {
