added responsive design.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,13 +11,13 @@
         <% include /partials/nav %>
     </nav>
 
-    <main class="container" role="main">
+    <main class="container-fluid mt-5" role="main">
         <div class="row">
             <div class="col-md-8 mx-auto">
                 <div class="card h-100 mb-3">
                     <div class="card-header form-group d-flex align-items-center">
                         <div class="w-25 mx-auto text-center input-append date" data-date="01-01">
-                            <input id="dp3" size="16" type="text" value="01-01" />
+                            <input id="dp3" size="16" type="text" value="01-01" class="form-control" >
                             <span class="add-on"><i class="fas fa-calendar-alt"></i></span>
                         </div>
                     </div>
