--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
             <div class="row">
             <a class="navbar-brand brand-logo" href="/">Everyday A Holiday</a>
         <!-- </div> -->
