--- a/views/photogallery.ejs
+++ b/views/photogallery.ejs
@@ -2,59 +2,59 @@
 <html lang="en">
 
 <head>
-    <% include /partials/head %>
+  <% include /partials/head %>
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <% include /partials/nav %>
-    </nav>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <% include /partials/nav %>
+  </nav>
 
-  <main class="container" role="main">
-    <div class="row">
-      <div class="col-md-4">
-        <div class="card  mb-3">
+  <main class="container-fluid mt-5" role="main">
+    <!-- <div class="row"> -->
+    <%for (var result = 0; result < photoData.length; result++){%>
+    <% if (result % 3 == 0) { %>
+    <div class="row mb-3">
+      <% } %>
+      <div class="col-6 col-sm-4 ">
+        <div class="card mx-auto" style="width: 11rem;">
           <!-- <h3 class="card-header">Today's Date</h3> -->
+
           <div class="card-body d-flex align-items-center">
-                <img style="height: 200px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22318%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20318%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_158bd1d28ef%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A16pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_158bd1d28ef%22%3E%3Crect%20width%3D%22318%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22129.359375%22%20y%3D%2297.35%22%3EImage%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                alt="Card image">
-            </div>
-            <div class="card-body text-center">
-            <h5 class="card-text text-center">Daily Calendar Interesting Fact</h5>
-        </div>
+            <img style="height: 200px; width: 100%; display: block;" src='<%=photoData[result].image_url%>'
+              alt="Card image">
+          </div>
+          <div class="card-body text-center">
+            <h5 class="card-text text-center"><%=photoData[result].name%></h5>
           </div>
         </div>
-        <div class="col-md-4">
-                <div class="card  mb-3">
-                  <!-- <h3 class="card-header">Today's Date</h3> -->
-                  <div class="card-body d-flex align-items-center">
-                        <img style="height: 200px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22318%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20318%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_158bd1d28ef%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A16pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_158bd1d28ef%22%3E%3Crect%20width%3D%22318%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22129.359375%22%20y%3D%2297.35%22%3EImage%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                        alt="Card image">
-                    </div>
-                    <div class="card-body text-center">
-                    <h5 class="card-text text-center">Daily Calendar Interesting Fact</h5>
-                </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                        <div class="card  mb-3">
-                          <!-- <h3 class="card-header">Today's Date</h3> -->
-                          <div class="card-body d-flex align-items-center">
-                                <img style="height: 200px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22318%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20318%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_158bd1d28ef%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A16pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_158bd1d28ef%22%3E%3Crect%20width%3D%22318%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22129.359375%22%20y%3D%2297.35%22%3EImage%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                                alt="Card image">
-                            </div>
-                            <div class="card-body text-center">
-                            <h5 class="card-text text-center">Daily Calendar Interesting Fact</h5>
-                        </div>
-                          </div>
-                        </div>
       </div>
-      <div class="row">
-            <div class="col-md-4">
-              <div class="card  mb-3">
-                <!-- <h3 class="card-header">Today's Date</h3> -->
-                <div class="card-body d-flex align-items-center">
+      <% if (result % 3 == 2) { %>
+        <div class="w-100 d-none d-md-block"></div>
+    </div>
+    <% } %>
+    <% } %>
+
+    <!-- </div> -->
+
+    <!-- </div> -->
+  </main>
+
+  <footer class="footer">
+    <% include /partials/footer %>
+  </footer>
+
+</body>
+<script>
+  $(document).ready(function () {
+    var photoData = <%-JSON.stringify(photoData)%>
+
+
+  })
+</script>
+
+</html>         <div class="card-body d-flex align-items-center">
                       <img style="height: 200px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22318%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20318%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_158bd1d28ef%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A16pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_158bd1d28ef%22%3E%3Crect%20width%3D%22318%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22129.359375%22%20y%3D%2297.35%22%3EImage%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
                       alt="Card image">
                   </div>
