--- a/views/game.ejs
+++ b/views/game.ejs
@@ -48,6 +48,12 @@
                 var result = wordfindgame.solve(gamePuzzle, words);
                 console.log(result);
             });
+
+            theday = parseInt(localStorage.getItem('currentday'));
+
+            month = pulldown.find(x => x.id === theday).month
+            day = pulldown.find(x => x.id === theday).day
+            
             $('#dp3').val(month + "-" + day);
             pulldata();
 
