--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,7 +6,7 @@
                 <a class="navbar-brand" href="photo">Photo Gallery</a>
             <!-- </div> -->
             <!-- <div class="container"> -->
-                    <a class="navbar-brand" href="game">Game</a>
+                    <a class="navbar-brand" href="game">Word Find</a>
                 <!-- </div> -->
             </div>
         </div>
