--- a/views/photogallery.ejs
+++ b/views/photogallery.ejs
@@ -12,30 +12,33 @@
   </nav>
 
   <main class="container-fluid mt-5" role="main">
-    <!-- <div class="row"> -->
+      <div class="container">
+          <div class="row ">
     <%for (var result = 0; result < photoData.length; result++){%>
-    <% if (result % 3 == 0) { %>
-    <div class="row mb-3">
-      <% } %>
-      <div class="col-6 col-sm-4 ">
-        <div class="card mx-auto" style="width: 11rem;">
-          <!-- <h3 class="card-header">Today's Date</h3> -->
-
-          <div class="card-body d-flex align-items-center">
-            <img style="height: 200px; width: 100%; display: block;" src='<%=photoData[result].image_url%>'
+  
+      
+      <div class="col">
+          <div class="card-deck">
+        <div class="card mb-2" >
+          <div class="card-body ">
+          <div class="col">
+          
+            <img class="mx-auto d-block" style="max-height: 300px" src='<%=photoData[result].image_url%>'
               alt="Card image">
-          </div>
-          <div class="card-body text-center">
-            <h5 class="card-text text-center"><%=photoData[result].name%></h5>
+              <p class="card-text text-center"><%=photoData[result].name%></p>
+            </div>
+          <!-- <div class="col">
+            
+          </div> -->
           </div>
         </div>
+        </div>
       </div>
-      <% if (result % 3 == 2) { %>
-        <div class="w-100 d-none d-md-block"></div>
-    </div>
+      
+    
     <% } %>
-    <% } %>
-
+  </div>
+</div>
     <!-- </div> -->
 
     <!-- </div> -->
